修复各类问题